--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Plus Jakarta Sans"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -23,47 +27,47 @@
       <div class="middle">
         <div>
           <header>
-            <div>
-              <h2>Launch Career</h2>
-            </div>
+            <p>Launch Career</p>
           </header>
 
           <div>
             <main>
               <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
-              <div>
-                <div>
+              <div class="column">
+                <div class="tickethead">
                   <span></span>
-                  <h4>TODO</h4>
+                  <h4>TO DO ( 4 )</h4>
                 </div>
                 <!-- Tasks container for TODO -->
-                <div>
-                  <div>Launch Epic Career 🚀</div>
-                  <div>Learn Data Structures and Algorithms 📚</div>
+                <div class="tickets">
+                  <div class="ticket">Launch Epic Career 🚀</div>
+                  <div class="ticket">Conquer React ⚛️</div>
+                  <div class="ticket">Understand Databases ⚙️</div>
+                  <div class="ticket">Crush Frameworks 🖼️</div>
                 </div>
               </div>
               <!-- DOING Column -->
-              <div>
-                <div>
+              <div class="column">
+                <div class="tickethead">
                   <span></span>
-                  <h4>DOING</h4>
+                  <h4>DOING ( 2 )</h4>
                 </div>
                 <!-- Tasks container for DOING -->
-                <div>
-                  <div>Master JavaScript 💛</div>
-                  <div>Keep on Going 🏆</div>
+                <div class="tickets">
+                  <div class="ticket">Master JavaScript 💛</div>
+                  <div class="ticket">Never Give Up 🏆</div>
                 </div>
               </div>
               <!-- DONE Column -->
-              <div>
-                <div>
+              <div class="column">
+                <div class="tickethead">
                   <span></span>
-                  <h4>DONE</h4>
+                  <h4>DONE ( 2 )</h4>
                 </div>
                 <!-- Tasks container for DONE -->
-                <div>
-                  <div>Contribute to Open Source Projects 🌐</div>
-                  <div>Build Portfolio Projects 🛠️</div>
+                <div class="tickets">
+                  <div class="ticket">Explore ES6 Features 🚀</div>
+                  <div class="ticket">Have fun 🥳</div>
                 </div>
               </div>
             </main>
