--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div>
             <main>
               <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
-              <div class="column">
+              <div class="todo_column">
                 <div class="tickethead">
                   <span></span>
                   <h4>TO DO ( 4 )</h4>
@@ -47,7 +47,7 @@
                 </div>
               </div>
               <!-- DOING Column -->
-              <div class="column">
+              <div class="doing_column">
                 <div class="tickethead">
                   <span></span>
                   <h4>DOING ( 2 )</h4>
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <!-- DONE Column -->
-              <div class="column">
+              <div class="done_column">
                 <div class="tickethead">
                   <span></span>
                   <h4>DONE ( 2 )</h4>
