Final style changes to style.css

--- a/index.html
+++ b/index.html
@@ -40,10 +40,18 @@
                 </div>
                 <!-- Tasks container for TODO -->
                 <div class="tickets">
-                  <div class="ticket">Launch Epic Career 🚀</div>
-                  <div class="ticket">Conquer React ⚛️</div>
-                  <div class="ticket">Understand Databases ⚙️</div>
-                  <div class="ticket">Crush Frameworks 🖼️</div>
+                  <div title="Get your career started" class="ticket">
+                    Launch Epic Career 🚀
+                  </div>
+                  <div title="Become familiar with React" class="ticket">
+                    Conquer React ⚛️
+                  </div>
+                  <div title="Deep dive into Databases" class="ticket">
+                    Understand Databases ⚙️
+                  </div>
+                  <div title="Understanding Frameworks" class="ticket">
+                    Crush Frameworks 🖼️
+                  </div>
                 </div>
               </div>
               <!-- DOING Column -->
@@ -54,8 +62,12 @@
                 </div>
                 <!-- Tasks container for DOING -->
                 <div class="tickets">
-                  <div class="ticket">Master JavaScript 💛</div>
-                  <div class="ticket">Never Give Up 🏆</div>
+                  <div title="Understanding JavaScript" class="ticket">
+                    Master JavaScript 💛
+                  </div>
+                  <div title="Always keep going" class="ticket">
+                    Never Give Up 🏆
+                  </div>
                 </div>
               </div>
               <!-- DONE Column -->
@@ -66,8 +78,12 @@
                 </div>
                 <!-- Tasks container for DONE -->
                 <div class="tickets">
-                  <div class="ticket">Explore ES6 Features 🚀</div>
-                  <div class="ticket">Have fun 🥳</div>
+                  <div title="Understanding ES6" class="ticket">
+                    Explore ES6 Features 🚀
+                  </div>
+                  <div title="Have fun while you're learning" class="ticket">
+                    Have fun 🥳
+                  </div>
                 </div>
               </div>
             </main>
